--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1296,6 +1296,10 @@ input, select, textarea {
 			/* line-height: 5.5rem; */
 			/* border: solid 1px #ffffff; */
 			/* border-radius: 100%; */
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
 		}
 
 			#header .logo .icon:before {
@@ -1441,9 +1445,10 @@ input, select, textarea {
 				}
 
 			#header .logo {
-				width: 4.75rem;
-				height: 4.75rem;
-				line-height: 4.75rem;
+				width: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 			}
 
 				#header .logo .icon:before {
@@ -1786,8 +1791,7 @@ input, select, textarea {
 }
 
 .paper-status em {
-    color: #ffc107;
-    font-style: italic;
+    color: #ffc107;    
     font-weight: 500;
     font-size: 0.75rem;
 }
